<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/ic_start_training"
        android:title="@string/title_start_training" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_plan"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_training_records"
        android:icon="@drawable/ic_training_records"
        android:title="@string/title_training_record" />

    <item
        android:id="@+id/navigation_body_record"
        android:icon="@drawable/ic_body_records"
        android:title="@string/title_body_record" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/title_setting" />

</menu>
