<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user_interface.fragment.CounterFragment">

    <TextView
        android:id="@+id/txtCurrentTitle"
        style="@style/TextViewStyle_2"
        android:text="@string/rest"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/txtCurrentSet"
        style="@style/TextViewStyle_3"
        android:text="0 / 4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@id/txtCurrentTitle"
        app:layout_constraintBaseline_toBaselineOf="@id/txtCurrentTitle"/>

    <TextView
        android:id="@+id/txtCurrentCounter"
        style="@style/TextViewStyle_4"
        android:text="00:00"
        app:layout_constraintTop_toTopOf="@id/txtCurrentTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/txtCurrentCounter_fraction"
        style="@style/TextViewStyle_5"
        android:text=".00"
        app:layout_constraintTop_toTopOf="@id/txtCurrentTitle"
        app:layout_constraintLeft_toRightOf="@+id/txtCurrentCounter"
        app:layout_constraintBaseline_toBaselineOf="@id/txtCurrentCounter"/>

    <Button
        android:id="@+id/btnCancel"
        style="@style/ButtonStyle_3"
        android:text="@string/cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnStartOrPause"
        style="@style/ButtonStyle_4"
        android:text="@string/start"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>